# engine

./: .clangd  CMakeLists.txt
bindings/: CMakeLists.txt  python_binding.cpp
python/: main.py
source/: main.cpp
source/core/launcher/: launcher.cpp  launcher.hpp
source/platform/: event.hpp  event_x11.cpp  game.cpp  game.hpp  loader.hpp  platform.hpp  renderer.cpp  renderer.hpp  window-x86_64.cpp  window.hpp  window_x11.cpp
tests/: flappy.cpp  test.cpp
